--- a/index.html
+++ b/index.html
@@ -5,3 +5,7 @@
   <p>I'm hosted with GitHub Pages.</p>
  </body>
 </html>
+<a class="weatherwidget-io" href="https://forecast7.com/en/10d82106d63/ho-chi-minh-city/" data-label_1="HO CHI MINH" data-label_2="VIET NAM" data-font="Roboto" data-icons="Climacons" data-mode="Forecast" data-theme="orange" >HO CHI MINH VIET NAM</a>
+<script>
+!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+</script>
